# conci

./: .gitignore  README.md  packaging  pyproject.toml  requirements.txt  setup_bin.sh  setup_exe.sh
conci/: __main__.py
conci/app/: _ElementoTabla.py  _PaginaAcercaDe.py  _PaginaAjustes.py  _PaginaConciliar.py  _TablaPlanillas.py  __main__.py  app.py  utils.py
conci/conciliar/: conciliar.py  utils.py
src/: app.py  conciliador.py  main.py  percepciones.py  utils.py
