[tool.poetry]
name = "conci"
version = "0.1.0"
description = ""
authors = ["claaj <matias.cajal@hotmail.com>"]
readme = "README.md"
packages = [{include = "conci"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
polars = "^0.18.13"
pyinstaller = "^5.13.0"
xlsx2csv = "^0.8.1"
xlsxwriter = "^3.1.2"
flet = "^0.9.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
